https://trello.com/c/O9DbFNB9 barre de navigation fixée en haut pour la version ordinateur et déplacable dans la version mobile

--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -65,6 +65,14 @@
     width: 50px;
 }
 
+/* Navbar ------------------------------------------------------------------------------------ */
+
+@media (max-width: 768px) {
+  .navbar-fixed-top.navbar-fixed-top-mobile {
+    position: absolute;
+  }
+}
+
 
 /* View Meals -------------------------------------------------------------------------------- */
 
